--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -16,6 +16,8 @@ jobs:
       BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
       CHAT_ID: ${{ secrets.CHAT_ID }}
       COOKIE_B64: ${{ secrets.COOKIE_B64 }}
+      GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+      CSE_ID: ${{ secrets.CSE_ID }}
 
     steps:
       - name: Repo'yu klonla
