--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -18,6 +18,7 @@ jobs:
       COOKIE_B64: ${{ secrets.COOKIE_B64 }}
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       CSE_ID: ${{ secrets.CSE_ID }}
+      COOKIE2_B64: ${{ secrets.COOKIE2_B64 }}
 
     steps:
       - name: Repo'yu klonla
