--- a/.github/workflows/scraperb.yml
+++ b/.github/workflows/scraperb.yml
@@ -28,7 +28,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
+          cache: 'pip'
+      
       - name: Pip cache
         uses: actions/cache@v3
         with:
