--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -49,9 +49,8 @@ jobs:
         run: echo "${{ secrets.COOKIE_B64 }}" | base64 -d > cookie_cep.json
 
       - name: Scraper A'yı çalıştır
-        run: |
-          python amazon_cep.py || echo "⚠️ Scraper A hata verdi ama zincir devam ediyor"
-
+        run: timeout 110s python amazon_cep.py || echo "⚠️ Scraper B timeout ile kesildi ama zincir devam ediyor"
+     
       - name: Değişiklikleri commit et ve pushla
         run: |
           git config --global user.name "github-actions"
