Checkout master branch in submodule during workflow

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Submodule'ları initialize et
         run: |
           git submodule update --init --recursive
+          cd urunlerim
+          git checkout master
 
       - name: Python ortamı
         uses: actions/setup-python@v4
