--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -20,6 +20,7 @@ jobs:
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       CSE_ID: ${{ secrets.CSE_ID }}
       COOKIE2_B64: ${{ secrets.COOKIE2_B64 }}
+      SUBMODULE_TOKEN: ${{ secrets.SUBMODULE_TOKEN }} 
     steps:
       - name: Repo'yu klonla
         uses: actions/checkout@v3
