--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -24,9 +24,13 @@ jobs:
     steps:
       - name: Repo'yu klonla
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 0
       - name: Submodule'ları initialize et
         run: |
           git submodule update --init --recursive
+          git submodule update --remote urunlerim
           cd urunlerim
           git checkout master
 
