--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -20,24 +20,10 @@ jobs:
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       CSE_ID: ${{ secrets.CSE_ID }}
       COOKIE2_B64: ${{ secrets.COOKIE2_B64 }}
-      SUBMODULE_TOKEN: ${{ secrets.SUBMODULE_TOKEN }} 
-    steps:
-      - name: Repo'yu klonla
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-          fetch-depth: 0
-      - name: Submodule'ları initialize et
+    steps: 
+      - name: urunlerim repo'sunu klonla
         run: |
-          git submodule update --init --recursive
-          git submodule update --remote urunlerim
-          cd urunlerim
-          git checkout master
-      
-      - name: Submodule kimlik ayarla
-        run: |
-          git -C urunlerim config user.name "github-actions"
-          git -C urunlerim config user.email "actions@github.com"
+          git clone https://github.com/anticomm/urunlerim.git
       
       - name: Python ortamı
         uses: actions/setup-python@v4
@@ -84,3 +70,12 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/anticomm/lens/actions/workflows/scraperb.yml/dispatches \
             -d '{"ref":"master"}' || echo "⚠️ Scraper B tetiklenemedi ama zincir devam ediyor"
+      - name: urunlerim repo'suna HTML pushla
+        run: |
+          cd urunlerim
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git pull origin main --rebase || echo "⏩ Pull başarısız, devam ediliyor"
+          git add Elektronik/*.html Elektronik/index.html || echo "⏩ HTML dosyası yok"
+          git commit -m "📦 Yeni ürünler eklendi" || echo "⏩ Commit edilecek değişiklik yok"
+          git push https://github-actions:${{ secrets.SUBMODULE_TOKEN }}@github.com/anticomm/urunlerim.git main --force-with-lease || echo "⏩ Push başarısız ama zincir devam ediyor"
