--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -20,6 +20,7 @@ jobs:
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       CSE_ID: ${{ secrets.CSE_ID }}
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      SUBMODULE_TOKEN: ${{ secrets.SUBMODULE_TOKEN }}
       COOKIE2_B64: ${{ secrets.COOKIE2_B64 }}
     steps: 
       - name: Reposu checkout edilsin
