--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -76,6 +76,8 @@ jobs:
             https://api.github.com/repos/anticomm/lens/actions/workflows/scraperb.yml/dispatches \
             -d '{"ref":"master"}' || echo "⚠️ Scraper B tetiklenemedi ama zincir devam ediyor"
       - name: urunlerim repo'suna HTML pushla
+        env:
+          TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           cd urunlerim
           git config user.name "github-actions"
