--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -66,8 +66,21 @@ jobs:
           git pull origin main --rebase --autostash || echo "⏩ Pull başarısız, devam ediliyor"
           git push || echo "⏩ Push başarısız ama zincir devam ediyor"
 
-      - name: 30 saniye bekle
-        run: sleep 3
+      - name: urunlerim repo'suna HTML pushla
+        env:
+          TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          cd urunlerim
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git remote set-url origin https://$TOKEN@github.com/anticomm/urunlerim.git
+
+          git add Elektronik/*.html Elektronik/index.html || echo "⏩ HTML dosyası yok"
+          git commit -m "📦 Yeni ürünler eklendi" || echo "⏩ Commit edilecek değişiklik yok"
+          git pull origin main --rebase --autostash || echo "⏩ Pull başarısız, devam ediliyor"
+          git push origin main --force-with-lease || echo "⏩ Push başarısız ama zincir devam ediyor"
+            - name: 30 saniye bekle
+              run: sleep 3
 
       - name: Scraper B'yi tetikle
         run: |
