--- a/.github/workflows/scraperc.yml
+++ b/.github/workflows/scraperc.yml
@@ -8,7 +8,7 @@ permissions:
   actions: write
 
 jobs:
-  run-scraper-c:
+  run-scraper-a:
     name: Scraper C
     runs-on: ubuntu-latest
     timeout-minutes: 4
@@ -19,16 +19,17 @@ jobs:
       COOKIE_B64: ${{ secrets.COOKIE_B64 }}
       GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       CSE_ID: ${{ secrets.CSE_ID }}
-      COOKIE2_B64: ${{ secrets.COOKIE2_B64 }}
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
       SUBMODULE_TOKEN: ${{ secrets.SUBMODULE_TOKEN }}
-    steps:
-      - name: Repo'yu klonla
-        uses: actions/checkout@v3
-      
-      - name: Submodule'ları initialize et
-        run: |
-          git submodule update --init --recursive
+      COOKIE2_B64: ${{ secrets.COOKIE2_B64 }}
+    steps: 
+      - name: Reposu checkout edilsin
+        uses: actions/checkout@v4
 
+      - name: urunlerim repo'sunu klonla
+        run: |
+          git clone https://github.com/anticomm/urunlerim.git
+      
       - name: Python ortamı
         uses: actions/setup-python@v4
         with:
@@ -53,21 +54,35 @@ jobs:
       - name: Cookie dosyasını oluştur
         run: echo "${{ secrets.COOKIE_B64 }}" | base64 -d > cookie_cep.json
 
-      - name: Scraper C'yi çalıştır
+      - name: Scraper C'yı çalıştır
         run: timeout 110s python amazon_cep.py || echo "⚠️ Scraper B timeout ile kesildi ama zincir devam ediyor"
-      
+     
       - name: Değişiklikleri commit et ve pushla
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           git add send_products.txt
           git commit -m "Scraper C → Fiyat güncellemesi" || echo "⏩ Değişiklik yok"
-          git pull origin master --rebase || echo "⏩ Pull başarısız, devam ediliyor"
-          git push || echo "⏩ Push başarısız ama zincir devam ediyor" 
-      - name: 30 saniye bekle
-        run: sleep 30
+          git pull origin main --rebase --autostash || echo "⏩ Pull başarısız, devam ediliyor"
+          git push || echo "⏩ Push başarısız ama zincir devam ediyor"
 
-      - name: Scraper A'yı tetikle
+      - name: urunlerim repo'suna HTML pushla
+        env:
+          TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          cd urunlerim
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git remote set-url origin https://$TOKEN@github.com/anticomm/urunlerim.git
+
+          git add Elektronik/*.html Elektronik/index.html || echo "⏩ HTML dosyası yok"
+          git commit -m "📦 Yeni ürünler eklendi" || echo "⏩ Commit edilecek değişiklik yok"
+          git pull origin main --rebase --autostash || echo "⏩ Pull başarısız, devam ediliyor"
+          git push origin main --force-with-lease || echo "⏩ Push başarısız ama zincir devam ediyor"
+      - name: 30 saniye bekle
+        run: sleep 3
+
+      - name: Scraper C'yi tetikle
         run: |
           curl -X POST \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
